@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-04-16T08:09:26Z",
+  "timestamp" : "2022-04-16T16:09:03Z",
   "count_outdated" : 870,
   "uniques_outdated" : 47,
-  "count" : 1001,
+  "count" : 995,
   "uniques" : 61,
   "views" : [
     {
       "timestamp": "2022-04-02T00:00:00Z",
-      "count": 12,
+      "count": 6,
       "count_minmax": [ 0, 28 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
