@@ -1,10 +1,10 @@
 {
-  "count": 131,
+  "count": 125,
   "uniques": 1,
   "views": [
     {
       "timestamp": "2022-04-02T00:00:00Z",
-      "count": 12,
+      "count": 6,
       "uniques": 1
     },
     {
